# lv2plugins

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  install.sh
scripts/: autopitch_plugin_graph.ipynb  generate_manifest.py  generate_manifest.sh  lilv.py  requirements.txt  threedee_plugin_graph.ipynb
scripts/lv2manifest/: __main__.py  logging.py  metacomments.py  model.py
src/autopitch/: AutoPitchPlugin.cpp  AutoPitchPlugin.hpp  PitchDetector.cpp  PitchDetector.hpp  PitchShifter.cpp  PitchShifter.hpp
src/autopitch-UI/: AutoPitchUi.cpp  AutoPitchUi.hpp
src/common/: Lv2Plugin.cpp  Lv2Plugin.hpp  music.cpp  music.hpp
src/common-audio/: FFT.cpp  FFT.hpp  Lv2AudioPlugin.cpp  Lv2AudioPlugin.hpp  Musical.cpp  Musical.hpp  music.cpp
src/common-ui/: Lv2UiPlugin.cpp  Lv2UiPlugin.hpp
src/tests/: main.cpp  plugin_loader.cpp  plugin_loader.hpp  test_FFT.cpp  test_autopitch.cpp  test_threedee.cpp
src/threedee/: ThreeDeePlugin.cpp  ThreeDeePlugin.hpp
src/unittests/: test_FFT.cpp  test_Musical.cpp
